# pile-o-bananas

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  py-lint.yml  py-release.yml  py-test.yml  python-ci.yml  python-cicd.yml  python-lint.yml  python-release.yml  python-test.yml  python-typecheck.yml  release.yml  test.yml
pile_o_bananas/: __main__.py
tests/: test_main.py
